--- a/public/index.html
+++ b/public/index.html
@@ -9,15 +9,27 @@
 	</head>
 
 	<header>
-		<p>Welcome!</p>
+		<p>Welcome To The Magical File Uploader!</p>
 	</header>
 
 	<body>
+	<h3> Uploader project </h3>	
 		<div class="container">
-			<br />
+			<ul> Specs:
+  				<li>
+
+				User Story: I can submit a FormData object that includes a file upload.
+
+				</li>
+
+				<li>User Story: When I submit something, I will receive the file size in bytes within the JSON response</li>
+
+				<li> You may want to use this package: https://www.npmjs.com/package/multer
+
+				</li>
+			</ul>
 		</div>
 	
-	<h3> Uploader project </h3>	
 	<p>Please choose a file to upload</p><input type="file">
 
 </body>
