--- a/public/index.html
+++ b/public/index.html
@@ -16,21 +16,16 @@
 	<h3> Uploader project </h3>	
 		<div class="container">
 			<ul> Specs:
-  				<li>
-
-				User Story: I can submit a FormData object that includes a file upload.
-
-				</li>
+  				<li>User Story: I can submit a FormData object that includes a file upload.</li>
 
 				<li>User Story: When I submit something, I will receive the file size in bytes within the JSON response</li>
 
-				<li> You may want to use this package: https://www.npmjs.com/package/multer
-
-				</li>
+				<li> You may want to use this package: https://www.npmjs.com/package/multer</li>
 			</ul>
 		</div>
 	
-	<p>Please choose a file to upload</p><input type="file">
+	<p>Please choose a file to upload</p><input class = "fupload" type="file">
+        <p class = "notification" >Uploading nothing.</p>
 
 </body>
 
